# ppt

./: README.md  ppt.sh  pyproject.toml
src/ppt/: ppt.py
