[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ppt"
dynamic = ["version"]
description = 'Primitive Package Tool'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Vinicius Monego", email = "monego@posteo.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"click",
"requests",
"rich",
]

[project.urls]
Documentation = "https://github.com/Vinicius Monego/ppt#readme"
Issues = "https://github.com/Vinicius Monego/ppt/issues"
Source = "https://github.com/Vinicius Monego/ppt"

[tool.hatch.version]
path = "src/ppt/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ppt tests}"

[tool.coverage.run]
source_pkgs = ["ppt", "tests"]
branch = true
parallel = true
omit = [
  "src/ppt/__about__.py",
]

[tool.coverage.paths]
ppt = ["src/ppt", "*/ppt/src/ppt"]
tests = ["tests", "*/ppt/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
